# General-Drone-Simulator

./: .gitignore  README.md  config.yaml  drone.py  drone_config.txt  evaluate_all_models.py  evaluate_model.py  labels.csv  log_trajectories.py  lstm.py  main.ipynb  main.py  manual.py  old_main.py  output_file.prof  plot_all_models.py  pyproject.toml  readme.md  run_best_model.py  screen.py  test.py  test_torch.py  testtesttest.py  tmp.py  train_lstm.py  ultimate_trainer.py  utilities.py
old/: main.py
old/src/: drone.py  screen.py
results/evaluation/: RMSEs.json  evaluation.json
results/tensorboard/: events.out.tfevents.1706867793.fedora.2094574.0  events.out.tfevents.1706879844.popos.126056.0  events.out.tfevents.1706879866.popos.126283.0  events.out.tfevents.1706879987.fedora.2187522.0  events.out.tfevents.1706890587.fedora.2341102.0  events.out.tfevents.1706957259.fedora.2438048.0
src/: agent.py  display.py  drone.py  drone_env.py  human.py  log_trajectories_callback.py  logger_callback.py  lstm.py  model.py  monitor.py  reward_callback.py  utilities.py  utils.py
training/saved_models/: PPO_1.0k_01-32-52_20240128-181344  STABLE_PPO_model_0.5m
training/special/: notes.md
training/tensorboard/: events.out.tfevents.1706865696.fedora.2079333.0  events.out.tfevents.1706865709.fedora.2079530.0  events.out.tfevents.1706865726.fedora.2079809.0  events.out.tfevents.1706865843.fedora.2080490.0  events.out.tfevents.1706865969.fedora.2081242.0  events.out.tfevents.1706866023.fedora.2081553.0  events.out.tfevents.1706866139.fedora.2082082.0  (+4 more)
(+18 files in other folders)
