[tool.poetry]
name = "drone_sim"
version = "0.1.0"
description = ""
authors = ["ICheered <tjeerd992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
pyyaml = "^6.0.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
