[tool.poetry]
name = "drone_sim"
version = "0.1.0"
description = ""
authors = ["ICheered <tjeerd992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
pyyaml = "^6.0.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
torch = "^2.1.1"
gymnasium = "^0.29.1"
stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
ipykernel = "^6.27.1"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
